--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,20 @@
 # Compiler files
 cache/
 out/
+/lib/
 
 # Ignores development broadcast logs
-!/broadcast
+broadcast
 /broadcast/*/31337/
+/broadcast/*/10218/
+/broadcast/*/17000/
+/broadcast/*/11155111/
 /broadcast/**/dry-run/
 
+node_modules/
 # Docs
 docs/
+test/
 
 # Dotenv file
 .env
